# overtone

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  build_release.bat
include/: timer.h  types.h  window.h
include/math/: vec_types.h
include/renderer/: renderer.h
shaders/: triangle.slang
src/: main.c  timer.c  window.c
src/renderer/: renderer.c
